# kinit

./: .kde-ci.yml  .reviewboardrc  CMakeLists.txt  ConfigureChecks.cmake  KF5InitConfig.cmake.in  KF5InitMacros.cmake  README.md  kde5init_win32lib_dummy.cpp.in  metainfo.yaml
cmake/: FindLibcap.cmake
docs/: CMakeLists.txt  wrapper.txt
docs/kdeinit5/: CMakeLists.txt  man-kdeinit5.8.docbook
po/af/: kinit5.po
po/ar/: kinit5.po
po/as/: kinit5.po
po/ast/: kinit5.po
po/az/: kinit5.po
po/be/: kinit5.po
po/be@latin/: kinit5.po
po/bg/: kinit5.po
po/bn/: kinit5.po
po/bn_IN/: kinit5.po
po/br/: kinit5.po
po/bs/: kinit5.po
po/ca/: kinit5.po
po/ca/docs/kdeinit5/: man-kdeinit5.8.docbook
po/ca@valencia/: kinit5.po
po/ca@valencia/docs/kdeinit5/: man-kdeinit5.8.docbook
po/crh/: kinit5.po
po/cs/: kinit5.po
po/csb/: kinit5.po
po/cy/: kinit5.po
po/da/: kinit5.po
po/de/: kinit5.po
po/de/docs/kdeinit5/: man-kdeinit5.8.docbook
po/el/: kinit5.po
po/en_GB/: kinit5.po
po/eo/: kinit5.po
po/es/: kinit5.po
po/et/: kinit5.po
po/eu/: kinit5.po
po/fa/: kinit5.po
po/fi/: kinit5.po
po/fr/: kinit5.po
po/fr/docs/kdeinit5/: man-kdeinit5.8.docbook
po/fy/: kinit5.po
po/ga/: kinit5.po
po/gd/: kinit5.po
po/gl/: kinit5.po
po/gu/: kinit5.po
po/ha/: kinit5.po
po/he/: kinit5.po
po/hi/: kinit5.po
po/hne/: kinit5.po
po/hr/: kinit5.po
po/hsb/: kinit5.po
po/hu/: kinit5.po
po/hy/: kinit5.po
po/ia/: kinit5.po
po/id/: kinit5.po
po/is/: kinit5.po
po/it/: kinit5.po
po/it/docs/kdeinit5/: man-kdeinit5.8.docbook
po/ja/: kinit5.po
po/ka/: kinit5.po
po/kk/: kinit5.po
po/km/: kinit5.po
po/kn/: kinit5.po
po/ko/: kinit5.po
po/ku/: kinit5.po
po/lb/: kinit5.po
po/lt/: kinit5.po
po/lv/: kinit5.po
po/mai/: kinit5.po
po/mk/: kinit5.po
po/ml/: kinit5.po
po/mr/: kinit5.po
po/ms/: kinit5.po
po/nb/: kinit5.po
po/nds/: kinit5.po
po/ne/: kinit5.po
po/nl/: kinit5.po
po/nl/docs/kdeinit5/: man-kdeinit5.8.docbook
po/nn/: kinit5.po
po/oc/: kinit5.po
po/or/: kinit5.po
po/pa/: kinit5.po
po/pl/: kinit5.po
po/ps/: kinit5.po
po/pt/: kinit5.po
po/pt_BR/: kinit5.po
po/pt_BR/docs/kdeinit5/: man-kdeinit5.8.docbook
po/ro/: kinit5.po
po/ru/: kinit5.po
po/se/: kinit5.po
po/si/: kinit5.po
po/sk/: kinit5.po
po/sl/: kinit5.po
po/sl/docs/kdeinit5/: man-kdeinit5.8.docbook
po/sq/: kinit5.po
po/sr/: kinit5.po
po/sr@ijekavian/: kinit5.po
po/sr@ijekavianlatin/: kinit5.po
po/sr@latin/: kinit5.po
po/sv/: kinit5.po
po/sv/docs/kdeinit5/: man-kdeinit5.8.docbook
po/ta/: kinit5.po
po/te/: kinit5.po
po/tg/: kinit5.po
po/th/: kinit5.po
po/tr/: kinit5.po
po/tt/: kinit5.po
po/ug/: kinit5.po
po/uk/: kinit5.po
po/uk/docs/kdeinit5/: man-kdeinit5.8.docbook
po/uz/: kinit5.po
po/uz@cyrillic/: kinit5.po
po/vi/: kinit5.po
po/wa/: kinit5.po
po/x-test/: kinit5.po
po/xh/: kinit5.po
po/zh_CN/: kinit5.po
po/zh_HK/: kinit5.po
po/zh_TW/: kinit5.po
src/: CMakeLists.txt  Messages.sh  config-kdeinit.h.cmake  klauncher_cmds.cpp  klauncher_cmds.h  wrapper.cpp
src/kdeinit/: CMakeLists.txt  kinit.cpp  kinit.h  kinit_mac.h  kinit_mac.mm  kinit_win.cpp  proctitle.cpp  proctitle.h
src/klauncher/: CMakeLists.txt  autostart.cpp  autostart.h  klauncher.cpp  klauncher.h  klauncher_adaptor.cpp  klauncher_adaptor.h  klauncher_main.cpp
src/kshell/: CMakeLists.txt  shell.cpp
src/kwrapper/: CMakeLists.txt  kwrapper.cpp  kwrapper_win.cpp
src/start_kdeinit/: CMakeLists.txt  start_kdeinit.c  start_kdeinit_wrapper.c
tests/: CMakeLists.txt  autostarttest.cpp
